ethtool: ioctl: Use array_size() helper in copy_{from,to}_user() (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -5212,6 +5212,7 @@
 	patches.suse/ice-refactor-devlink-getter-fallback-functions-to-vo.patch
 	patches.suse/ice-Fix-macro-name-for-IPv4-fragment-flag.patch
 	patches.suse/ice-Prefer-kcalloc-over-open-coded-arithmetic.patch
+	patches.suse/ethtool-ioctl-Use-array_size-helper-in-copy_-from-to.patch
 	patches.suse/net-mlx4-Use-array_size-helper-in-copy_to_user.patch
 	patches.suse/gve-Use-kvcalloc-instead-of-kvzalloc.patch
 	patches.suse/devlink-Add-missed-notifications-iterators.patch
