--- a/series.conf
+++ b/series.conf
@@ -12218,6 +12218,7 @@
 	patches.suse/bnxt-rename-bnxt_rx_pages-to-bnxt_rx_agg_pages_skb.patch
 	patches.suse/bnxt-adding-bnxt_rx_agg_pages_xdp-for-aggregated-xdp.patch
 	patches.suse/bnxt-set-xdp_buff-pfmemalloc-flag-if-needed.patch
+	patches.suse/bnxt-change-receive-ring-space-parameters.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
