bnxt: Use the bitmap API to allocate bitmaps (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -13491,6 +13491,7 @@
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
+	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
