--- a/series.conf
+++ b/series.conf
@@ -5789,6 +5789,7 @@
 	patches.suse/msft-hv-2476-net-mana-Support-hibernation-and-kexec.patch
 	patches.suse/ethtool-push-the-rtnl_lock-into-dev_ethtool.patch
 	patches.suse/ethtool-handle-info-flash-data-copying-outside-rtnl_.patch
+	patches.suse/devlink-expose-get-put-functions.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
