bnxt_en: Implement .adjtime() for PTP RTC mode (jsc#PED-1495).

--- a/series.conf
+++ b/series.conf
@@ -10677,6 +10677,7 @@
 	patches.suse/bnxt_en-Update-firmware-interface-to-1.10.2.73.patch
 	patches.suse/bnxt_en-PTP-Refactor-PTP-initialization-functions.patch
 	patches.suse/bnxt_en-Add-driver-support-to-use-Real-Time-Counter-.patch
+	patches.suse/bnxt_en-Implement-.adjtime-for-PTP-RTC-mode.patch
 	patches.suse/dt-bindings-net-xgmac_mdio-Remove-unsupported-bus-fr.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the--2e7b4a328ed6.patch
