--- a/series.conf
+++ b/series.conf
@@ -8419,6 +8419,7 @@
 	patches.suse/mac80211-Remove-a-couple-of-obsolete-TODO.patch
 	patches.suse/mac80211-introduce-channel-switch-disconnect-functio.patch
 	patches.suse/devlink-Add-new-io_eq_size-generic-device-param.patch
+	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
