--- a/series.conf
+++ b/series.conf
@@ -12216,6 +12216,7 @@
 	patches.suse/bnxt-add-flag-to-denote-that-an-xdp-program-is-curre.patch
 	patches.suse/bnxt-refactor-bnxt_rx_pages-operate-on-skb_shared_in.patch
 	patches.suse/bnxt-rename-bnxt_rx_pages-to-bnxt_rx_agg_pages_skb.patch
+	patches.suse/bnxt-adding-bnxt_rx_agg_pages_xdp-for-aggregated-xdp.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
