- RDMA: Constify netdev->dev_addr accesses (jsc#PED-1494). - Refresh   patches.suse/RDMA-bnxt_re-Use-helper-function-to-set-GUIDs.patch.

--- a/series.conf
+++ b/series.conf
@@ -6198,6 +6198,7 @@
 	patches.suse/RDMA-mlx5-fix-build-error-with-INFINIBAND_USER_ACCES.patch
 	patches.suse/RDMA-ipoib-Use-dev_addr_mod.patch
 	patches.suse/RDMA-mlx5-Use-dev_addr_mod.patch
+	patches.suse/RDMA-Constify-netdev-dev_addr-accesses.patch
 	patches.suse/RDMA-irdma-Remove-the-unused-spin-lock-in-struct-ird.patch
 	patches.suse/RDMA-qedr-Remove-unsupported-qedr_resize_cq-callback.patch
 	patches.suse/RDMA-umem-Allow-pinned-dmabuf-umem-usage.patch
