- bnxt_en: add dynamic debug support for HWRM messages   (jsc#PED-1495). - Refresh   patches.suse/bnxt_en-Increase-firmware-message-response-DMA-wait-.patch.

--- a/series.conf
+++ b/series.conf
@@ -8530,6 +8530,7 @@
 	patches.suse/Bluetooth-btusb-Add-support-for-Foxconn-QCA-0xe0d0.patch
 	patches.suse/Bluetooth-L2CAP-uninitialized-variables-in-l2cap_soc.patch
 	patches.suse/iwlwifi-mvm-Use-div_s64-instead-of-do_div-in-iwl_mvm.patch
+	patches.suse/bnxt_en-add-dynamic-debug-support-for-HWRM-messages.patch
 	patches.suse/bnxt_en-use-firmware-provided-max-timeout-for-messag.patch
 	patches.suse/bna-Simplify-DMA-setting.patch
 	patches.suse/vmxnet3-Remove-useless-DMA-32-fallback-configuration.patch
