--- a/series.conf
+++ b/series.conf
@@ -14172,6 +14172,7 @@
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
+	patches.suse/ALSA-hda-sigmatel-Fix-unused-variable-warning-for-be.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
 	# mkp/scsi queue
