ALSA: usb-audio: Inform the delayed registration more properly (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14168,6 +14168,7 @@
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
+	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
