--- a/series.conf
+++ b/series.conf
@@ -14170,6 +14170,7 @@
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
+	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
