ASoC: qcom: sm8250: add missing module owner (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14173,6 +14173,7 @@
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
 	patches.suse/ALSA-hda-sigmatel-Fix-unused-variable-warning-for-be.patch
+	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
 	# mkp/scsi queue
