--- a/series.conf
+++ b/series.conf
@@ -14176,6 +14176,7 @@
 	patches.suse/ALSA-pcm-oss-Fix-race-at-SNDCTL_DSP_SYNC.patch
 	patches.suse/ALSA-hda-sigmatel-Fix-unused-variable-warning-for-be.patch
 	patches.suse/ALSA-hda-tegra-Align-BDL-entry-to-4KB-boundary.patch
+	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 
