--- a/series.conf
+++ b/series.conf
@@ -14171,6 +14171,7 @@
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
+	patches.suse/ALSA-aloop-Fix-random-zeros-in-capture-data-when-usi.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
 	patches.suse/ALSA-hda-sigmatel-Fix-unused-variable-warning-for-be.patch
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
