--- a/series.conf
+++ b/series.conf
@@ -14186,6 +14186,7 @@
 	patches.suse/hwmon-mr75203-update-pvt-v_num-and-vm_num-to-the-act.patch
 	patches.suse/hwmon-mr75203-fix-voltage-equation-for-negative-sour.patch
 	patches.suse/hwmon-mr75203-fix-multi-channel-voltage-reading.patch
+	patches.suse/hwmon-mr75203-enable-polling-for-all-VM-channels.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
