hwmon: (mr75203) fix VM sensor allocation when "intel,vm-map" not defined (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14182,6 +14182,7 @@
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
 	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
+	patches.suse/hwmon-mr75203-fix-VM-sensor-allocation-when-intel-vm.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
