--- a/series.conf
+++ b/series.conf
@@ -14180,6 +14180,7 @@
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
+	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
