hwmon: (mr75203) update pvt->v_num and vm_num to the actual number of used sensors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14183,6 +14183,7 @@
 	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
 	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
 	patches.suse/hwmon-mr75203-fix-VM-sensor-allocation-when-intel-vm.patch
+	patches.suse/hwmon-mr75203-update-pvt-v_num-and-vm_num-to-the-act.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
