--- a/series.conf
+++ b/series.conf
@@ -14181,6 +14181,7 @@
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
+	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
