--- a/series.conf
+++ b/series.conf
@@ -14184,6 +14184,7 @@
 	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
 	patches.suse/hwmon-mr75203-fix-VM-sensor-allocation-when-intel-vm.patch
 	patches.suse/hwmon-mr75203-update-pvt-v_num-and-vm_num-to-the-act.patch
+	patches.suse/hwmon-mr75203-fix-voltage-equation-for-negative-sour.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
