--- a/series.conf
+++ b/series.conf
@@ -14188,6 +14188,7 @@
 	patches.suse/hwmon-mr75203-fix-multi-channel-voltage-reading.patch
 	patches.suse/hwmon-mr75203-enable-polling-for-all-VM-channels.patch
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
+	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
