docs: i2c: i2c-topology: fix incorrect heading (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14187,6 +14187,7 @@
 	patches.suse/hwmon-mr75203-fix-voltage-equation-for-negative-sour.patch
 	patches.suse/hwmon-mr75203-fix-multi-channel-voltage-reading.patch
 	patches.suse/hwmon-mr75203-enable-polling-for-all-VM-channels.patch
+	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
