--- a/series.conf
+++ b/series.conf
@@ -52148,6 +52148,7 @@
 	patches.suse/virtio_net-move-tx-vq-operation-under-tx-queue-lock.patch
 	patches.suse/tracing-histograms-Fix-parsing-of-sym-offset-modifier.patch
 	patches.suse/ALSA-hda-realtek-fix-mute-led-of-the-HP-Pavilion-15-.patch
+	patches.suse/ALSA-usb-audio-fix-spelling-mistakes.patch
 	patches.suse/ALSA-isa-Fix-error-return-code-in-snd_cmi8330_probe.patch
 	patches.suse/ALSA-intel8x0-Fix-breakage-at-ac97-clock-measurement.patch
 	patches.suse/nvme-tcp-can-t-set-sk_user_data-without-write_lock.patch
