--- a/series.conf
+++ b/series.conf
@@ -56975,6 +56975,7 @@
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
+	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
