ALSA: usb-audio: Split endpoint setups for hw_params and prepare (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56976,6 +56976,7 @@
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
+	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
