--- a/series.conf
+++ b/series.conf
@@ -57035,6 +57035,7 @@
 	patches.suse/netfilter-nf_tables-stricter-validation-of-element-d.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
 	patches.suse/netfilter-nf_conntrack_irc-Tighten-matching-on-DCC-m.patch
+	patches.suse/watchdog-wdat_wdt-fix-min-max-timer-value.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
