--- a/series.conf
+++ b/series.conf
@@ -14251,6 +14251,8 @@
 	patches.suse/nvme-tcp-handle-number-of-queue-changes.patch
 	patches.suse/nvme-rdma-handle-number-of-queue-changes.patch
 
+	patches.suse/watchdog-wdat_wdt-fix-min-max-timer-value.patch
+
 	########################################################
 	# kbuild/module infrastructure fixes
 	########################################################
