--- a/series.conf
+++ b/series.conf
@@ -70,6 +70,7 @@
 	# to get into mainline any time soon (or ever) belong
 	# to area specific sections below.
 	########################################################
+	patches.suse/watchdog-wdat_wdt-fix-min-max-timer-value.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
