--- a/series.conf
+++ b/series.conf
@@ -2291,6 +2291,7 @@
 	# to get into mainline any time soon (or ever) belong
 	# to area specific sections below.
 	########################################################
+	patches.suse/watchdog-wdat_wdt-fix-min-max-timer-value.patch
 	patches.suse/vduse-prevent-uninitialized-memory-accesses.patch
 
 	########################################################
