--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1607,3 +1607,4 @@ dbac14a5a05ff8e1ce7c0da0e1f520ce39ec62ea # removal of export would break kabi
 44585f7bc0cb01095bc2ad4258049c02bbad21ef # not relevant to our configs
 5102bb1c9f82857a3164af9d7ab7ad628cb783ed # not relevant to our configs
 ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant to our configs
+835d1c3a98799914db8aee0973018af21128cd1e # Patch 62a679cb2825 ("arm64: simplify ptrauth initialization") is missing, so this one is not safe.
