--- a/series.conf
+++ b/series.conf
@@ -46490,6 +46490,7 @@
 	patches.suse/ARM-dts-sun8i-v3s-fix-GIC-node-memory-range.patch
 	patches.suse/ARM-dts-sun7i-pcduino3-nano-enable-RGMII-RX-TX-delay-on-PHY.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-fix-I2C_PM-scl-pin.patch
+	patches.suse/arm64-dts-allwinner-A64-Sopine-phy-mode-rgmii-id.patch
 	patches.suse/RDMA-efa-Use-the-correct-current-and-new-states-in-m.patch
 	patches.suse/RDMA-cm-Fix-an-attempt-to-use-non-valid-pointer-when.patch
 	patches.suse/cfg80211-initialize-rekey_data.patch
