arm64: dts: allwinner: H5: NanoPi Neo Plus2: phy-mode rgmii-id (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -46491,6 +46491,7 @@
 	patches.suse/ARM-dts-sun7i-pcduino3-nano-enable-RGMII-RX-TX-delay-on-PHY.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-fix-I2C_PM-scl-pin.patch
 	patches.suse/arm64-dts-allwinner-A64-Sopine-phy-mode-rgmii-id.patch
+	patches.suse/arm64-dts-allwinner-H5-NanoPi-Neo-Plus2-phy-mode-rgmii-id.patch
 	patches.suse/RDMA-efa-Use-the-correct-current-and-new-states-in-m.patch
 	patches.suse/RDMA-cm-Fix-an-attempt-to-use-non-valid-pointer-when.patch
 	patches.suse/cfg80211-initialize-rekey_data.patch
