blacklist.conf: ("arm64: Fix kernel address detection of __is_lm_address()")

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1608,3 +1608,4 @@ dbac14a5a05ff8e1ce7c0da0e1f520ce39ec62ea # removal of export would break kabi
 5102bb1c9f82857a3164af9d7ab7ad628cb783ed # not relevant to our configs
 ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant to our configs
 835d1c3a98799914db8aee0973018af21128cd1e # Patch 62a679cb2825 ("arm64: simplify ptrauth initialization") is missing, so this one is not safe.
+519ea6f1c82fcdc9842908155ae379de47818778 # This needs f4693c2716b35d (arm64: mm: extend linear region for 52-bit VA configurations) which is way to intrusive
