--- a/series.conf
+++ b/series.conf
@@ -48710,6 +48710,7 @@
 	patches.suse/0008-xen-scsiback-don-t-handle-error-by-BUG.patch
 	patches.suse/0009-xen-blkback-fix-error-handling-in-xen_blkbk_map.patch
 	patches.suse/arm64-Extend-workaround-for-erratum-1024718-to-all-versions-of-Cortex-A55.patch
+	patches.suse/arm64-mm-Always-update-TCR_EL1-from-__cpu_set_tcr_t0sz.patch
 	patches.suse/msft-hv-2226-Drivers-hv-vmbus-Avoid-use-after-free-in-vmbus_onoff.patch
 	patches.suse/kvm-do-not-assume-pte-is-writable-after-follow_pfn.patch
 	patches.suse/x86-reboot-force-all-cpus-to-exit-vmx-root-if-vmx-is-supported.patch
