arm64: mm: use a 48-bit ID map when possible on 52-bit VA builds (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -49364,6 +49364,7 @@
 	patches.suse/xen-events-avoid-handling-the-same-event-on-two-cpus.patch
 	patches.suse/arm64-mm-Fix-pfn_valid-for-ZONE_DEVICE-based-memory.patch
 	patches.suse/arm64-kasan-fix-page_alloc-tagging-with-DEBUG_VIRTUA.patch
+	patches.suse/arm64-mm-use-a-48-bit-ID-map-when-possible-on-52-bit-VA-builds.patch
 	patches.suse/configfs-fix-a-use-after-free-in-__configfs_open_file.patch
 	patches.suse/mmc-core-Fix-partition-switch-time-for-eMMC.patch
 	patches.suse/mmc-cqhci-Fix-random-crash-when-remove-mmc-module-ca.patch
