--- a/series.conf
+++ b/series.conf
@@ -51434,6 +51434,7 @@
 	patches.suse/x86-sev-use-sev-prefix-for-messages-from-sev-c
 	patches.suse/sched-rt-Fix-RT-utilization-tracking-during-policy-c.patch
 	patches.suse/x86-elf-use-bitul-macro-in-uapi-headers.patch
+	patches.suse/arm64-tlb-fix-the-TTL-value-of-tlb_get_level.patch
 	patches.suse/kvm-nvmx-ensure-64-bit-shift-when-checking-vmfunc-bi.patch
 	patches.suse/KVM-VMX-Refuse-to-load-kvm_intel-if-EPT-and-NX-are-d.patch
 	patches.suse/KVM-nVMX-Handle-split-lock-AC-exceptions-that-happen.patch
