--- a/series.conf
+++ b/series.conf
@@ -54639,6 +54639,7 @@
 	patches.suse/ALSA-oss-fix-compile-error-when-OSS_DEBUG-is-enabled.patch
 	patches.suse/ALSA-usb-audio-Drop-superfluous-0-in-Presonus-Studio.patch
 	patches.suse/ALSA-seq-Set-upper-limit-of-processed-events.patch
+	patches.suse/arm64-tegra-Remove-non-existent-Tegra194-reset.patch
 	patches.suse/ALSA-hda-realtek-Fix-silent-output-on-Gigabyte-X570--c19330086795.patch
 	patches.suse/ASoC-uniphier-drop-selecting-non-existing-SND_SOC_UN.patch
 	patches.suse/ASoC-rt5663-Handle-device_property_read_u32_array-er.patch
