--- a/series.conf
+++ b/series.conf
@@ -1325,6 +1325,7 @@
 	patches.suse/usb-host-fotg210-fix-the-actual_length-of-an-iso-pac.patch
 	patches.suse/usb-gadget-u_ether-fix-a-potential-null-pointer-dere.patch
 	patches.suse/USB-EHCI-ehci-mv-improve-error-handling-in-mv_ehci_e.patch
+	patches.suse/usb-xhci-renesas-Minor-coding-style-cleanup.patch
 	patches.suse/usb-isp1301-omap-Fix-the-GPIO-include.patch
 	patches.suse/usb-gadget-composite-Allow-bMaxPower-0-if-self-power.patch
 	patches.suse/usb-audio-v2-add-ability-to-define-feature-unit-desc.patch
