arm64: mm: fix p?d_leaf() (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -55739,6 +55739,7 @@
 	patches.suse/cifs-fix-NULL-ptr-dereference-in-refresh_mounts-.patch
 	patches.suse/cifs-use-correct-lock-type-in-cifs_reconnect-.patch
 	patches.suse/cifs-destage-any-unwritten-data-to-the-server-before-calling-copych.patch
+	patches.suse/arm64-mm-fix-p-d_leaf.patch
 	patches.suse/KVM-SEV-add-cache-flush-to-solve-SEV-cache-incoherency-issues
 	patches.suse/ata-pata_marvell-Check-the-bmdma_addr-beforing-readi.patch
 	patches.suse/ext4-fix-symlink-file-size-not-match-to-file-content.patch
