arm64: tegra: Fix SDMMC1 CD on P2888 (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -56569,6 +56569,7 @@
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
 	patches.suse/firmware-tegra-bpmp-Do-only-aligned-access-to-IPC-me.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
+	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
 	patches.suse/spi-synquacer-Add-missing-clk_disable_unprepare.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
