--- a/series.conf
+++ b/series.conf
@@ -56581,6 +56581,7 @@
 	patches.suse/ACPI-video-Force-backlight-native-for-some-TongFang-.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
+	patches.suse/crypto-arm64-gcm-Select-AEAD-for-GHASH_ARM64_CE.patch
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
 	patches.suse/vmxnet3-add-support-for-capability-registers.patch
 	patches.suse/vmxnet3-add-support-for-large-passthrough-BAR-regist.patch
