arm64: dts: uniphier: Fix USB interrupts for PXs3 SoC (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -56842,6 +56842,7 @@
 	patches.suse/ext4-unindent-codeblock-in-ext4_xattr_block_set.patch
 	patches.suse/ext4-fix-race-when-reusing-xattr-blocks.patch
 	patches.suse/jbd2-fix-assertion-jh-b_frozen_data-NULL-failure-whe.patch
+	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
 	patches.suse/drm-meson-Fix-overflow-implicit-truncation-warnings.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
