--- a/series.conf
+++ b/series.conf
@@ -10052,6 +10052,7 @@
 	patches.suse/x86-kvmclock-Fix-Hyper-V-Isolated-VM-s-boot-issue-wh.patch
 	patches.suse/KVM-x86-mmu-Passing-up-the-error-state-of-mmu_alloc_.patch
 	patches.suse/btrfs-fix-lost-prealloc-extents-beyond-eof-after-ful.patch
+	patches.suse/btrfs-fix-relocation-crash-due-to-premature-return-f.patch
 	patches.suse/btrfs-qgroup-fix-deadlock-between-rescan-worker-and-.patch
 	patches.suse/btrfs-add-missing-run-of-delayed-items-after-unlink-.patch
 	patches.suse/virtio_console-break-out-of-buf-poll-on-remove.patch
