ftrace: Fix NULL pointer dereference in is_ftrace_trampoline when ftrace is dead (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56929,6 +56929,7 @@
 	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
+	patches.suse/ftrace-Fix-NULL-pointer-dereference-in-is_ftrace_trampoline-when-ftrace-is-dead.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
