tracing: hold caller_addr to hardirq_{enable,disable}_ip (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56974,6 +56974,7 @@
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
+	patches.suse/tracing-hold-caller_addr-to-hardirq_-enable-disable-_ip.patch
 
 	# netdev/net
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
