ftrace: Fix NULL pointer dereference in is_ftrace_trampoline when ftrace is dead (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14056,6 +14056,7 @@
 	patches.suse/s390-hypfs-avoid-error-message-under-KVM.patch
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
+	patches.suse/ftrace-Fix-NULL-pointer-dereference-in-is_ftrace_trampoline-when-ftrace-is-dead.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/tracing-Have-filter-accept-common_cpu-to-be-consistent.patch
 	patches.suse/audit-fix-potential-double-free-on-error-path-from-f.patch
