--- a/series.conf
+++ b/series.conf
@@ -14173,6 +14173,7 @@
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
 	patches.suse/regulator-core-Clean-up-on-enable-failure.patch
+	patches.suse/tracing-hold-caller_addr-to-hardirq_-enable-disable-_ip.patch
 	patches.suse/ALSA-usb-audio-Inform-the-delayed-registration-more-.patch
 	patches.suse/ALSA-usb-audio-Register-card-again-for-iface-over-de.patch
 	patches.suse/ALSA-usb-audio-Split-endpoint-setups-for-hw_params-a.patch
