--- a/series.conf
+++ b/series.conf
@@ -1312,6 +1312,7 @@
 	patches.suse/serial-max310x-Use-clock-names-property-matching-to-.patch
 	patches.suse/xtensa-ISS-don-t-panic-in-rs_init.patch
 	patches.suse/hvsi-don-t-panic-on-tty_register_driver-failure.patch
+	patches.suse/tty-drop-put_tty_driver.patch
 	patches.suse/serial-8250_pci-make-setup_port-parameters-explicitl.patch
 	patches.suse/vt-keyboard.c-make-console-an-unsigned-int.patch
 	patches.suse/serial-8250_omap-Handle-optional-overrun-throttle-ms.patch
