--- a/series.conf
+++ b/series.conf
@@ -10223,6 +10223,7 @@
 	patches.suse/arm64-Do-not-defer-reserve_crashkernel-for-platforms.patch
 	patches.suse/arm64-mm-Drop-const-from-conditional-arm64_dma_phys_.patch
 	patches.suse/arm64-mm-avoid-fixmap-race-condition-when-create-pud.patch
+	patches.suse/arm64-lib-Import-latest-version-of-Arm-Optimized-Routines-strcmp.patch
 	patches.suse/arm64-signal-nofpsimd-Do-not-allocate-fp-simd-contex.patch
 	patches.suse/edac-amd64-set-memory-type-per-dimm.patch
 	patches.suse/edac-amd64-add-new-register-offset-support-and-related-changes.patch
