arm64: errata: Add Cortex-A510 to the repeat tlbi list (git-fixes)
Enable this errata fix configuration option to arm64/default.

--- a/series.conf
+++ b/series.conf
@@ -13298,6 +13298,7 @@
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
 	patches.suse/revert-x86-sev-expose-sev_es_ghcb_hv_call-for-use-by-hyperv.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
+	patches.suse/arm64-errata-Add-Cortex-A510-to-the-repeat-tlbi-list.patch
 	patches.suse/arm64-Do-not-forget-syscall-when-starting-a-new-thre.patch
 	patches.suse/arm64-fix-oops-in-concurrently-setting-insn_emulatio.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
