--- a/series.conf
+++ b/series.conf
@@ -13299,6 +13299,7 @@
 	patches.suse/revert-x86-sev-expose-sev_es_ghcb_hv_call-for-use-by-hyperv.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
 	patches.suse/arm64-errata-Add-Cortex-A510-to-the-repeat-tlbi-list.patch
+	patches.suse/arm64-select-TRACE_IRQFLAGS_NMI_SUPPORT.patch
 	patches.suse/arm64-Do-not-forget-syscall-when-starting-a-new-thre.patch
 	patches.suse/arm64-fix-oops-in-concurrently-setting-insn_emulatio.patch
 	patches.suse/arm64-kasan-Revert-arm64-mte-reset-the-page-tag-in-p.patch
