--- a/series.conf
+++ b/series.conf
@@ -13399,6 +13399,7 @@
 	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 	patches.suse/crypto-ccp-During-shutdown-check-SEV-data-pointer-be.patch
+	patches.suse/crypto-arm64-gcm-Select-AEAD-for-GHASH_ARM64_CE.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
 	patches.suse/crypto-hisilicon-Kunpeng916-crypto-driver-don-t-slee.patch
 	patches.suse/crypto-hisilicon-hpre-don-t-use-GFP_KERNEL-to-alloc-.patch
