--- a/series.conf
+++ b/series.conf
@@ -1382,6 +1382,7 @@
 	patches.suse/usb-bdc-Fix-an-error-handling-path-in-bdc_probe-when.patch
 	patches.suse/usb-bdc-Fix-a-resource-leak-in-the-error-handling-pa.patch
 	patches.suse/usb-xhci-mtk-fix-use-after-free-of-mtk-hcd.patch
+	patches.suse/usb-xhci-mtk-support-option-to-disable-usb2-ports.patch
 	patches.suse/usb-xhci-mtk-fix-issue-of-out-of-bounds-array-access.patch
 	patches.suse/usb-mtu3-return-successful-suspend-status.patch
 	patches.suse/usb-mtu3-fix-random-remote-wakeup.patch
