--- a/series.conf
+++ b/series.conf
@@ -1384,6 +1384,7 @@
 	patches.suse/usb-xhci-mtk-fix-use-after-free-of-mtk-hcd.patch
 	patches.suse/usb-xhci-mtk-support-option-to-disable-usb2-ports.patch
 	patches.suse/usb-xhci-mtk-fix-issue-of-out-of-bounds-array-access.patch
+	patches.suse/usb-xhci-mtk-update-fs-bus-bandwidth-by-bw_budget_ta.patch
 	patches.suse/usb-mtu3-return-successful-suspend-status.patch
 	patches.suse/usb-mtu3-fix-random-remote-wakeup.patch
 	patches.suse/usb-chipidea-host-fix-port-index-underflow-and-UBSAN.patch
