--- a/series.conf
+++ b/series.conf
@@ -1387,6 +1387,7 @@
 	patches.suse/usb-xhci-mtk-update-fs-bus-bandwidth-by-bw_budget_ta.patch
 	patches.suse/usb-xhci-mtk-check-boundary-before-check-tt.patch
 	patches.suse/usb-xhci-mtk-add-a-member-of-num_esit.patch
+	patches.suse/usb-xhci-mtk-modify-the-SOF-ITP-interval-for-mt8195.patch
 	patches.suse/usb-mtu3-return-successful-suspend-status.patch
 	patches.suse/usb-mtu3-fix-random-remote-wakeup.patch
 	patches.suse/usb-chipidea-host-fix-port-index-underflow-and-UBSAN.patch
