usb: xhci-mtk: Do not use xhci's virt_dev in drop_endpoint (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -1388,6 +1388,7 @@
 	patches.suse/usb-xhci-mtk-check-boundary-before-check-tt.patch
 	patches.suse/usb-xhci-mtk-add-a-member-of-num_esit.patch
 	patches.suse/usb-xhci-mtk-modify-the-SOF-ITP-interval-for-mt8195.patch
+	patches.suse/usb-xhci-mtk-Do-not-use-xhci-s-virt_dev-in-drop_endp.patch
 	patches.suse/usb-mtu3-return-successful-suspend-status.patch
 	patches.suse/usb-mtu3-fix-random-remote-wakeup.patch
 	patches.suse/usb-chipidea-host-fix-port-index-underflow-and-UBSAN.patch
