usb: xhci-mtk: allow bandwidth table rollover (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -1392,6 +1392,7 @@
 	patches.suse/usb-mtu3-return-successful-suspend-status.patch
 	patches.suse/usb-mtu3-fix-random-remote-wakeup.patch
 	patches.suse/usb-chipidea-host-fix-port-index-underflow-and-UBSAN.patch
+	patches.suse/usb-xhci-mtk-allow-bandwidth-table-rollover.patch
 	patches.suse/usb-host-xhci-rcar-Don-t-reload-firmware-after-the-c.patch
 	patches.suse/usb-isp1760-fix-memory-pool-initialization.patch
 	patches.suse/usb-isp1760-fix-qtd-fill-length.patch
