--- a/series.conf
+++ b/series.conf
@@ -6355,6 +6355,7 @@
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
+	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
 	patches.suse/usb-gadget-hid-fix-error-code-in-do_config.patch
 	patches.suse/usb-host-ohci-tmio-check-return-value-after-calling-.patch
