--- a/series.conf
+++ b/series.conf
@@ -6353,6 +6353,7 @@
 	patches.suse/USB-core-Make-do_proc_control-and-do_proc_bulk-killa.patch
 	patches.suse/usb-musb-tusb6010-check-return-value-after-calling-p.patch
 	patches.suse/usb-typec-tipd-Remove-WARN_ON-in-tps6598x_block_read.patch
+	patches.suse/usb-core-hcd-fix-messages-in-usb_hcd_request_irqs.patch
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
