--- a/series.conf
+++ b/series.conf
@@ -6359,6 +6359,7 @@
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
 	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
+	patches.suse/usb-core-config-Change-sizeof-struct-.-to-sizeof.patch
 	patches.suse/usb-gadget-hid-fix-error-code-in-do_config.patch
 	patches.suse/usb-host-ohci-tmio-check-return-value-after-calling-.patch
 	patches.suse/usb-musb-select-GENERIC_PHY-instead-of-depending-on-.patch
