--- a/series.conf
+++ b/series.conf
@@ -6678,6 +6678,7 @@
 	patches.suse/PCI-Rename-pcibios_add_device-to-pcibios_device_add.patch
 	patches.suse/PCI-Do-not-enable-AtomicOps-on-VFs.patch
 	patches.suse/net-hns3-use-dev_driver_string-instead-of-pci_dev-dr.patch
+	patches.suse/usb-xhci-Use-to_pci_driver-instead-of-pci_dev-driver.patch
 	patches.suse/PCI-portdrv-Rename-pm_iter-to-pcie_port_device_iter.patch
 	patches.suse/PCI-pciehp-Ignore-Link-Down-Up-caused-by-error-induc.patch
 	patches.suse/PCI-P2PDMA-Apply-bus-offset-correctly-in-DMA-address.patch
