usb: xhci-mtk: enable wake-up interrupt after runtime_suspend called (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -5917,6 +5917,7 @@
 	patches.suse/PM-hibernate-Get-block-device-exclusively-in-swsusp_.patch
 	patches.suse/PM-sleep-Do-not-let-syscore-devices-runtime-suspend-.patch
 	patches.suse/PM-wakeirq-support-enabling-wake-up-irq-after-runtim.patch
+	patches.suse/usb-xhci-mtk-enable-wake-up-interrupt-after-runtime_.patch
 	patches.suse/cpufreq-intel_pstate-Fix-cpu-pstate.turbo_freq-initi.patch
 	patches.suse/cpufreq-tegra186-tegra194-Handle-errors-in-BPMP-resp.patch
 	patches.suse/intel_idle-enable-interrupts-before-C1-on-Xeons.patch
