--- a/series.conf
+++ b/series.conf
@@ -7830,6 +7830,7 @@
 	patches.suse/zonefs-add-MODULE_ALIAS_FS.patch
 	patches.suse/libata-if-T_LENGTH-is-zero-dma-direction-should-be-D.patch
 	patches.suse/usb-gadget-u_ether-fix-race-in-setting-MAC-address-i.patch
+	patches.suse/usb-xhci-mtk-fix-list_del-warning-when-enable-list-d.patch
 	patches.suse/usb-cdnsp-Fix-incorrect-calling-of-cdnsp_died-functi.patch
 	patches.suse/usb-cdnsp-Fix-issue-in-cdnsp_log_ep-trace-event.patch
 	patches.suse/usb-cdnsp-Fix-incorrect-status-for-control-request.patch
