usb: xhci-mtk: remove unnecessary error check (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8816,6 +8816,7 @@
 	patches.suse/usb-dwc3-meson-g12a-fix-shared-reset-control-use.patch
 	patches.suse/USB-ehci_brcm_hub_control-Improve-port-index-sanitiz.patch
 	patches.suse/usb-gadget-f_fs-Use-stream_open-for-endpoint-files.patch
+	patches.suse/usb-xhci-mtk-remove-unnecessary-error-check.patch
 	patches.suse/usb-dwc3-gadget-Skip-checking-Update-Transfer-status.patch
 	patches.suse/usb-dwc3-gadget-Ignore-Update-Transfer-cmd-params.patch
 	patches.suse/usb-dwc3-gadget-Skip-reading-GEVNTSIZn.patch
