usb: xhci-mtk: fix random remote wakeup (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8817,6 +8817,7 @@
 	patches.suse/USB-ehci_brcm_hub_control-Improve-port-index-sanitiz.patch
 	patches.suse/usb-gadget-f_fs-Use-stream_open-for-endpoint-files.patch
 	patches.suse/usb-xhci-mtk-remove-unnecessary-error-check.patch
+	patches.suse/usb-xhci-mtk-fix-random-remote-wakeup.patch
 	patches.suse/usb-dwc3-gadget-Skip-checking-Update-Transfer-status.patch
 	patches.suse/usb-dwc3-gadget-Ignore-Update-Transfer-cmd-params.patch
 	patches.suse/usb-dwc3-gadget-Skip-reading-GEVNTSIZn.patch
