xhci: use max() to make code cleaner (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8827,6 +8827,7 @@
 	patches.suse/usb-host-xen-hcd-add-missing-unlock-in-error-path.patch
 	patches.suse/usb-hub-Add-delay-for-SuperSpeed-hub-resume-to-let-l.patch
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
+	patches.suse/xhci-use-max-to-make-code-cleaner.patch
 	patches.suse/thunderbolt-xdomain-Avoid-potential-stack-OOB-read.patch
 	patches.suse/thunderbolt-Runtime-PM-activate-both-ends-of-the-dev.patch
 	patches.suse/thunderbolt-Tear-down-existing-tunnels-when-resuming.patch
