USB: common: debug: add needed kernel.h include (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8848,6 +8848,7 @@
 	patches.suse/usb-gadget-clear-related-members-when-goto-fail.patch
 	patches.suse/USB-Fix-slab-out-of-bounds-Write-bug-in-usb_hcd_poll.patch
 	patches.suse/USB-core-Fix-bug-in-resuming-hub-s-handling-of-wakeu.patch
+	patches.suse/USB-common-debug-add-needed-kernel.h-include.patch
 	patches.suse/usb-dwc3-qcom-Fix-NULL-vs-IS_ERR-checking-in-dwc3_qc.patch
 	patches.suse/usb-dwc2-do-not-gate-off-the-hardware-if-it-does-not.patch
 	patches.suse/usb-dwc2-gadget-initialize-max_speed-from-params.patch
