--- a/series.conf
+++ b/series.conf
@@ -8822,6 +8822,7 @@
 	patches.suse/usb-dwc3-gadget-Ignore-Update-Transfer-cmd-params.patch
 	patches.suse/usb-dwc3-gadget-Skip-reading-GEVNTSIZn.patch
 	patches.suse/usb-uhci-add-aspeed-ast2600-uhci-support.patch
+	patches.suse/usb-core-Fix-file-path-that-does-not-exist.patch
 	patches.suse/0001-usb-Add-Xen-pvUSB-protocol-description.patch
 	patches.suse/0002-usb-Introduce-Xen-pvUSB-frontend-xen-hcd.patch
 	patches.suse/usb-host-xen-hcd-add-missing-unlock-in-error-path.patch
