--- a/series.conf
+++ b/series.conf
@@ -12889,6 +12889,7 @@
 	patches.suse/scsi-lpfc-Add-more-logging-of-cmd-and-cqe-informatio.patch
 	patches.suse/scsi-lpfc-Allow-reduced-polling-rate-for-nvme_admin_.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.4.patch
+	patches.suse/scsi-ipr-Fix-missing-incorrect-resource-cleanup-in-e.patch
 	patches.suse/gpio-dwapb-Don-t-print-error-on-EPROBE_DEFER.patch
 	patches.suse/cifs-fix-reconnect-on-smb3-mount-types.patch
 	patches.suse/scripts-gdb-change-kernel-config-dumping-method.patch
