--- a/series.conf
+++ b/series.conf
@@ -12410,6 +12410,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.2-patches.patch
 	patches.suse/scsi-qla2xxx-Remove-free_sg-command-flag.patch
 	patches.suse/scsi-ufs-qcom-Fix-ufs_qcom_resume
+	patches.suse/scsi-ipr-Directly-return-instead-of-using-local-ret-.patch
 	patches.suse/scsi-qla2xxx-Remove-unneeded-flush_workqueue.patch
 	patches.suse/scsi-lpfc-Remove-unneeded-variable-a346f28a.patch
 	patches.suse/scsi-ufs-core-Exclude-UECxx-from-SFR-dump-list
