usb: core: hcd: change sizeof(vaddr) to sizeof(unsigned long) (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8825,6 +8825,7 @@
 	patches.suse/usb-core-Fix-file-path-that-does-not-exist.patch
 	patches.suse/0001-usb-Add-Xen-pvUSB-protocol-description.patch
 	patches.suse/0002-usb-Introduce-Xen-pvUSB-frontend-xen-hcd.patch
+	patches.suse/usb-core-hcd-change-sizeof-vaddr-to-sizeof-unsigned-.patch
 	patches.suse/usb-host-xen-hcd-add-missing-unlock-in-error-path.patch
 	patches.suse/usb-hub-Add-delay-for-SuperSpeed-hub-resume-to-let-l.patch
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
