--- a/series.conf
+++ b/series.conf
@@ -8778,6 +8778,7 @@
 	patches.suse/0001-usb-Add-Xen-pvUSB-protocol-description.patch
 	patches.suse/0002-usb-Introduce-Xen-pvUSB-frontend-xen-hcd.patch
 	patches.suse/usb-host-xen-hcd-add-missing-unlock-in-error-path.patch
+	patches.suse/usb-hub-avoid-warm-port-reset-during-USB3-disconnect.patch
 	patches.suse/usb-hub-Add-delay-for-SuperSpeed-hub-resume-to-let-l.patch
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
 	patches.suse/thunderbolt-xdomain-Avoid-potential-stack-OOB-read.patch
