watchdog/pseries-wdt: initial support for H_WATCHDOG-based watchdog timers (jsc#PED-549).
- Update config files.

- supported.conf: Add pseries-wdt

--- a/supported.conf
+++ b/supported.conf
@@ -4776,6 +4776,7 @@
 		drivers/watchdog/pcwd_usb					# Berkshire USB-PC Watchdog driver
 -!optional	drivers/watchdog/pm8916_wdt
 -		drivers/watchdog/pretimeout_panic
+		drivers/watchdog/pseries-wdt					# jsc#PED-549
 -!optional	drivers/watchdog/qcom-wdt					# armv7hl
 -!optional	drivers/watchdog/rn5t618_wdt					# armv7hl
 		drivers/watchdog/rti_wdt					# jsc#PED-1379
