powerpc/pseries: Add support for FORM2 associativity (jsc#PED-551).
- Refresh patches.suse/powerpc-pseries-Interface-to-represent-PAPR-firmware.patch

--- a/series.conf
+++ b/series.conf
@@ -2773,6 +2773,7 @@
 	patches.suse/powerpc-pseries-Rename-TYPE1_AFFINITY-to-FORM1_AFFIN.patch
 	patches.suse/powerpc-pseries-Consolidate-different-NUMA-distance-.patch
 	patches.suse/powerpc-pseries-Add-a-helper-for-form1-cpu-distance.patch
+	patches.suse/powerpc-pseries-Add-support-for-FORM2-associativity.patch
 	patches.suse/powerpc-pseries-Fix-build-error-when-NUMA-n.patch
 	patches.suse/powerpc-config-Fix-IPV6-warning-in-mpc855_ads.patch
 	patches.suse/powerpc-config-Renable-MTD_PHYSMAP_OF.patch
