--- a/series.conf
+++ b/series.conf
@@ -7214,6 +7214,7 @@
 	patches.suse/pstore-blk-Use-lu-to-format-unsigned-long.patch
 	patches.suse/KVM-PPC-Book3S-HV-Use-GLOBAL_TOC-for-kvmppc_h_set_da.patch
 	patches.suse/powerpc-pseries-rename-numa_dist_table-to-form2_dist.patch
+	patches.suse/powerpc-pseries-Fix-numa-FORM2-parsing-fallback-code.patch
 	patches.suse/powerpc-pseries-ddw-Revert-Extend-upper-limit-for-hu.patch
 	patches.suse/powerpc-xive-Change-IRQ-domain-to-a-tree-domain.patch
 	patches.suse/perf-x86-intel-uncore-Fix-filter_tid-mask-for-CHA-events-on-Skylake-Server.patch
