--- a/series.conf
+++ b/series.conf
@@ -13941,6 +13941,7 @@
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
 	patches.suse/powerpc-perf-Optimize-clearing-the-pending-PMI-and-r.patch
 	patches.suse/powerpc-pseries-hvcall.h-add-H_WATCHDOG-opcode-H_NOO.patch
+	patches.suse/powerpc-pseries-add-FW_FEATURE_WATCHDOG-flag.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
