--- a/series.conf
+++ b/series.conf
@@ -11097,6 +11097,7 @@
 	patches.suse/powerpc-pseries-vas-Use-common-names-in-VAS-capabili.patch
 	patches.suse/powerpc-pseries-vas-Save-PID-in-pseries_vas_window-s.patch
 	patches.suse/powerpc-vas-Add-paste-address-mmap-fault-handler.patch
+	patches.suse/powerpc-vas-Return-paste-instruction-failure-if-no-a.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
