powerpc/pseries/vas: Add 'update_total_credits' entry for QoS capabilities (jsc#PED-542).

--- a/series.conf
+++ b/series.conf
@@ -11102,6 +11102,7 @@
 	patches.suse/powerpc-pseries-vas-Close-windows-with-DLPAR-core-re.patch
 	patches.suse/powerpc-pseries-vas-Reopen-windows-with-DLPAR-core-a.patch
 	patches.suse/powerpc-pseries-vas-sysfs-interface-to-export-capabi.patch
+	patches.suse/powerpc-pseries-vas-Add-update_total_credits-entry-f.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
