--- a/series.conf
+++ b/series.conf
@@ -11949,6 +11949,7 @@
 	patches.suse/ASoC-SOF-Fix-NULL-pointer-exception-in-sof_pci_probe.patch
 	patches.suse/genirq-Synchronize-interrupt-thread-startup.patch
 	patches.suse/timekeeping-Mark-NMI-safe-time-accessors-as-notrace.patch
+	patches.suse/powerpc-pseries-vas-Use-QoS-credits-from-the-userspa.patch
 	patches.suse/powerpc-vdso-Fix-incorrect-CFI-in-gettimeofday.S.patch
 	patches.suse/platform-surface-aggregator-Fix-initialization-order.patch
 	patches.suse/virtio-fix-virtio-transitional-ids.patch
