--- a/series.conf
+++ b/series.conf
@@ -11100,6 +11100,7 @@
 	patches.suse/powerpc-vas-Return-paste-instruction-failure-if-no-a.patch
 	patches.suse/powerpc-vas-Map-paste-address-only-if-window-is-acti.patch
 	patches.suse/powerpc-pseries-vas-Close-windows-with-DLPAR-core-re.patch
+	patches.suse/powerpc-pseries-vas-Reopen-windows-with-DLPAR-core-a.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
