--- a/series.conf
+++ b/series.conf
@@ -11105,6 +11105,7 @@
 	patches.suse/powerpc-pseries-vas-Add-update_total_credits-entry-f.patch
 	patches.suse/powerpc-pseries-vas-Define-global-hv_cop_caps-struct.patch
 	patches.suse/powerpc-pseries-vas-Modify-reconfig-open-close-funct.patch
+	patches.suse/powerpc-pseries-vas-Add-VAS-migration-handler.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
