--- a/series.conf
+++ b/series.conf
@@ -8070,6 +8070,7 @@
 	patches.suse/memory-renesas-rpc-if-Return-error-in-case-devm_iore.patch
 	patches.suse/soc-ti-pruss-fix-referenced-node-in-error-message.patch
 	patches.suse/soc-tegra-Add-devm_tegra_core_dev_init_opp_table_com.patch
+	patches.suse/usb-chipidea-tegra-Add-runtime-PM-and-OPP-support.patch
 	patches.suse/soc-imx-gpcv2-Synchronously-suspend-MIX-domains.patch
 	patches.suse/PM-AVS-qcom-cpr-Use-div64_ul-instead-of-do_div.patch
 	patches.suse/arm64-dts-renesas-cat875-Add-rx-tx-delays.patch
