usb: hub: make wait_for_connected() take an int instead of a pointer to int (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8829,6 +8829,7 @@
 	patches.suse/0002-usb-Introduce-Xen-pvUSB-frontend-xen-hcd.patch
 	patches.suse/usb-core-hcd-change-sizeof-vaddr-to-sizeof-unsigned-.patch
 	patches.suse/usb-host-xen-hcd-add-missing-unlock-in-error-path.patch
+	patches.suse/usb-hub-make-wait_for_connected-take-an-int-instead-.patch
 	patches.suse/usb-hub-Add-delay-for-SuperSpeed-hub-resume-to-let-l.patch
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
 	patches.suse/xhci-use-max-to-make-code-cleaner.patch
