--- a/series.conf
+++ b/series.conf
@@ -8832,6 +8832,7 @@
 	patches.suse/usb-hub-make-wait_for_connected-take-an-int-instead-.patch
 	patches.suse/usb-hub-Add-delay-for-SuperSpeed-hub-resume-to-let-l.patch
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
+	patches.suse/usb-core-Export-usb_device_match_id.patch
 	patches.suse/xhci-use-max-to-make-code-cleaner.patch
 	patches.suse/thunderbolt-xdomain-Avoid-potential-stack-OOB-read.patch
 	patches.suse/thunderbolt-Runtime-PM-activate-both-ends-of-the-dev.patch
