usb: Link the ports to the connectors they are attached to (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -8834,6 +8834,7 @@
 	patches.suse/usb-ftdi-elan-fix-memory-leak-on-device-disconnect.patch
 	patches.suse/usb-core-Export-usb_device_match_id.patch
 	patches.suse/xhci-use-max-to-make-code-cleaner.patch
+	patches.suse/usb-Link-the-ports-to-the-connectors-they-are-attach.patch
 	patches.suse/thunderbolt-xdomain-Avoid-potential-stack-OOB-read.patch
 	patches.suse/thunderbolt-Runtime-PM-activate-both-ends-of-the-dev.patch
 	patches.suse/thunderbolt-Tear-down-existing-tunnels-when-resuming.patch
