platform/x86: Rename wmaa-backlight-wmi to nvidia-wmi-ec-backlight (jsc#PED-1164).

--- a/series.conf
+++ b/series.conf
@@ -6021,6 +6021,7 @@
 	patches.suse/ABI-sysfs-platform-dell-privacy-wmi-correct-ABI-entr.patch
 	patches.suse/ABI-sysfs-platform-intel-pmc-add-blank-lines-to-make.patch
 	patches.suse/platform-x86-Remove-WMAA-from-identifier-names-in-wm.patch
+	patches.suse/platform-x86-Rename-wmaa-backlight-wmi-to-nvidia-wmi.patch
 	patches.suse/platform-x86-thinkpad_acpi-Fix-bitwise-vs.-logical-w.patch
 	patches.suse/platform-surface-aggregator_registry-Add-support-for.patch
 	patches.suse/HID-surface-hid-Use-correct-event-registry-for-manag.patch
