--- a/series.conf
+++ b/series.conf
@@ -6020,6 +6020,7 @@
 	patches.suse/platform-x86-wmi-introduce-helper-to-convert-driver-.patch
 	patches.suse/ABI-sysfs-platform-dell-privacy-wmi-correct-ABI-entr.patch
 	patches.suse/ABI-sysfs-platform-intel-pmc-add-blank-lines-to-make.patch
+	patches.suse/platform-x86-Remove-WMAA-from-identifier-names-in-wm.patch
 	patches.suse/platform-x86-thinkpad_acpi-Fix-bitwise-vs.-logical-w.patch
 	patches.suse/platform-surface-aggregator_registry-Add-support-for.patch
 	patches.suse/HID-surface-hid-Use-correct-event-registry-for-manag.patch
