--- a/series.conf
+++ b/series.conf
@@ -6008,6 +6008,7 @@
 	patches.suse/drm-amdgpu-display-add-quirk-handling-for-stutter-mo.patch
 	patches.suse/drm-amd-display-dcn20_resource_construct-reduce-scop.patch
 	patches.suse/drm-amdgpu-gmc6-fix-DMA-mask-from-44-to-40-bits.patch
+	patches.suse/platform-x86-Add-driver-for-ACPI-WMAA-EC-based-backl.patch
 	patches.suse/platform-x86-wmi-remove-unnecessary-argument.patch
 	patches.suse/platform-x86-wmi-remove-unnecessary-casts.patch
 	patches.suse/platform-x86-wmi-remove-unnecessary-checks.patch
