Enable the build of nvidia-wmi-ec-backlight module (jsc#PED-1164)

--- a/supported.conf
+++ b/supported.conf
@@ -3505,6 +3505,7 @@
 -		drivers/platform/x86/msi-laptop
 -		drivers/platform/x86/msi-wmi
 -		drivers/platform/x86/mxm-wmi
+		drivers/platform/x86/nvidia-wmi-ec-backlight
 -		drivers/platform/x86/panasonic-laptop
 -		drivers/platform/x86/pcengines-apuv2
 -		drivers/platform/x86/peaq-wmi
