--- a/series.conf
+++ b/series.conf
@@ -13915,6 +13915,7 @@
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Behringer-UMC202HD.patch
 	patches.suse/ALSA-core-Add-async-signal-helpers.patch
 	patches.suse/ALSA-timer-Use-deferred-fasync-helper.patch
+	patches.suse/ALSA-control-Use-deferred-fasync-helper.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Lenovo-Yoga9-14IAP7.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NV45PZ.patch
 	patches.suse/ASoC-qcom-q6dsp-Fix-an-off-by-one-in-q6adm_alloc_cop.patch
