--- a/series.conf
+++ b/series.conf
@@ -10541,6 +10541,7 @@
 	patches.suse/ASoC-wm8350-Handle-error-for-wm8350_register_irq.patch
 	patches.suse/ASoC-fsi-Add-check-for-clk_enable.patch
 	patches.suse/ASoC-Intel-sof_sdw-fix-quirks-for-2022-HP-Spectre-x3.patch
+	patches.suse/ASoC-SOF-Intel-pci-tgl-add-RPL-S-support.patch
 	patches.suse/ASoC-atmel-Fix-error-handling-in-snd_proto_probe.patch
 	patches.suse/ASoC-rockchip-i2s-Fix-missing-clk_disable_unprepare-.patch
 	patches.suse/ASoC-SOF-Add-missing-of_node_put-in-imx8m_probe.patch
