--- a/series.conf
+++ b/series.conf
@@ -11641,6 +11641,7 @@
 	patches.suse/ASoC-codecs-wcd934x-do-not-switch-off-SIDO-Buck-when.patch
 	patches.suse/ASoC-Intel-soc-acpi-correct-device-endpoints-for-max.patch
 	patches.suse/ALSA-usb-audio-Clear-MIDI-port-active-flag-after-dra.patch
+	patches.suse/ALSA-hda-intel-dsp-config-Add-RaptorLake-PCI-IDs.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NP70PNP.patch
 	patches.suse/cifs-Use-kzalloc-instead-of-kmalloc-memset.patch
 	patches.suse/cifs-fix-NULL-ptr-dereference-in-refresh_mounts-.patch
