--- a/series.conf
+++ b/series.conf
@@ -12306,6 +12306,7 @@
 	patches.suse/ASoC-mediatek-Fix-missing-of_node_put-in-mt2701_wm89.patch
 	patches.suse/ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif_err_s.patch
 	patches.suse/ASoC-rsnd-care-return-value-from-rsnd_node_fixed_ind.patch
+	patches.suse/ASoC-SOF-Intel-pci-tgl-add-ADL-PS-support.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Add-quirk-for-the-HP-Pro-Tab.patch
 	patches.suse/ASoC-rk3328-fix-disabling-mclk-on-pclk-probe-failure.patch
 	patches.suse/ASoC-dapm-Don-t-fold-register-value-changes-into-not.patch
