jfs: fix GPF in diFree (bsc#1203389).

--- a/series.conf
+++ b/series.conf
@@ -51844,6 +51844,7 @@
 	patches.suse/iommu-amd-fix-extended-features-logging
 	patches.suse/iommu-dma-fix-iova-reserve-dma-ranges
 	patches.suse/iommu-dma-fix-compile-warning-in-32-bit-builds
+	patches.suse/jfs-fix-GPF-in-diFree.patch
 	patches.suse/xfs-only-reset-incore-inode-health-state-flags-when-.patch
 	patches.suse/xfs-fix-log-intent-recovery-ENOSPC-shutdowns-when-in.patch
 	patches.suse/scsi-lpfc-Remove-redundant-assignment-to-pointer-tem.patch
