jfs: prevent NULL deref in diFree (bsc#1203389).

--- a/series.conf
+++ b/series.conf
@@ -55561,6 +55561,7 @@
 	patches.suse/ptrace-Check-PTRACE_O_SUSPEND_SECCOMP-permission-on-.patch
 	patches.suse/dma-debug-fix-return-value-of-__setup-handlers.patch
 	patches.suse/jfs-fix-divide-error-in-dbNextAG.patch
+	patches.suse/jfs-prevent-NULL-deref-in-diFree.patch
 	patches.suse/NFS-Use-of-mapping_set_error-results-in-spurious-err.patch
 	patches.suse/NFS-Return-valid-errors-from-nfs2-3_decode_dirent.patch
 	patches.suse/SUNRPC-change-locking-for-xs_swap_enable-disable.patch
