usb: typec: tipd: Don't read/write more bytes than required (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6316,6 +6316,7 @@
 	patches.suse/usb-ehci-handshake-CMD_RUN-instead-of-STS_HALT.patch
 	patches.suse/USB-core-Make-do_proc_control-and-do_proc_bulk-killa.patch
 	patches.suse/usb-musb-tusb6010-check-return-value-after-calling-p.patch
+	patches.suse/usb-typec-tipd-Don-t-read-write-more-bytes-than-requ.patch
 	patches.suse/usb-typec-tipd-Remove-WARN_ON-in-tps6598x_block_read.patch
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
