--- a/series.conf
+++ b/series.conf
@@ -6317,6 +6317,7 @@
 	patches.suse/USB-core-Make-do_proc_control-and-do_proc_bulk-killa.patch
 	patches.suse/usb-musb-tusb6010-check-return-value-after-calling-p.patch
 	patches.suse/usb-typec-tipd-Don-t-read-write-more-bytes-than-requ.patch
+	patches.suse/usb-typec-tipd-Add-an-additional-overflow-check.patch
 	patches.suse/usb-typec-tipd-Remove-WARN_ON-in-tps6598x_block_read.patch
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
