--- a/series.conf
+++ b/series.conf
@@ -6356,6 +6356,7 @@
 	patches.suse/usb-musb-tusb6010-check-return-value-after-calling-p.patch
 	patches.suse/usb-typec-tipd-Remove-WARN_ON-in-tps6598x_block_read.patch
 	patches.suse/usb-core-hcd-fix-messages-in-usb_hcd_request_irqs.patch
+	patches.suse/usb-typec-tcpci-Fix-spelling-mistake-resolbed-resolv.patch
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
