JFS: fix memleak in jfs_mount (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53728,6 +53728,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-PC70HS.patch
 	patches.suse/ALSA-usb-audio-Add-Audient-iD14-to-mixer-map-quirk-t.patch
 	patches.suse/RDMA-bnxt_re-Update-statistics-counter-name.patch
+	patches.suse/JFS-fix-memleak-in-jfs_mount.patch
 	patches.suse/vfio-ccw-Remove-unneeded-GFP_DMA
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24xx_init_intc.patch
 	patches.suse/arm64-dts-rockchip-Fix-GPU-register-width-for-RK3328.patch
