--- a/series.conf
+++ b/series.conf
@@ -6360,6 +6360,7 @@
 	patches.suse/usb-typec-ucsi-Always-cancel-the-command-if-PPM-repo.patch
 	patches.suse/usb-typec-ucsi-Don-t-stop-alt-mode-registration-on-b.patch
 	patches.suse/usb-typec-ucsi-Add-polling-mechanism-for-partner-tas.patch
+	patches.suse/usb-typec-ucsi-acpi-Reduce-the-command-completion-ti.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
 	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
