JFS: more checks for invalid superblock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48638,6 +48638,7 @@
 	patches.suse/ACPI-property-Satisfy-kernel-doc-validator-part-2.patch
 	patches.suse/ACPI-Use-DEVICE_ATTR_-RW-RO-WO-macros.patch
 	patches.suse/ACPI-configfs-add-missing-check-after-configfs_regis.patch
+	patches.suse/JFS-more-checks-for-invalid-superblock.patch
 	patches.suse/fs-jfs-fix-potential-integer-overflow-on-shift-of-a-.patch
 	patches.suse/btrfs-handle-space_info-total_bytes_pinned-inside-the-delayed-ref-itself.patch
 	patches.suse/btrfs-account-for-new-extents-being-deleted-in-total_bytes_pinned.patch
