vrf: fix packet sniffing for traffic originating from ip tunnels (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11441,6 +11441,7 @@
 	patches.suse/msft-hv-2565-Drivers-hv-balloon-Disable-balloon-and-hot-add-accor.patch
 	patches.suse/msft-hv-2566-Drivers-hv-vmbus-Replace-smp_store_mb-with-virt_stor.patch
 	patches.suse/net-sfc-add-missing-xdp-queue-reinitialization.patch
+	patches.suse/vrf-fix-packet-sniffing-for-traffic-originating-from.patch
 	patches.suse/skbuff-fix-coalescing-for-page_pool-fragment-recycli.patch
 	patches.suse/ice-Clear-default-forwarding-VSI-during-VSI-release.patch
 	patches.suse/qed-fix-ethtool-register-dump.patch
