dpaa2-ptp: Fix refcount leak in dpaa2_ptp_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11450,6 +11450,7 @@
 	patches.suse/bnxt_en-reserve-space-inside-receive-page-for-skb_sh.patch
 	patches.suse/bnxt_en-Prevent-XDP-redirect-from-running-when-stopp.patch
 	patches.suse/sfc-Do-not-free-an-empty-page_ring.patch
+	patches.suse/dpaa2-ptp-Fix-refcount-leak-in-dpaa2_ptp_probe.patch
 	patches.suse/net-openvswitch-don-t-send-internal-clone-attribute-.patch
 	patches.suse/net-openvswitch-fix-leak-of-nested-actions.patch
 	patches.suse/net-sfc-fix-using-uninitialized-xdp-tx_queue.patch
