net: ethernet: stmmac: fix altr_tse_pcs function when using a fixed-link (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11561,6 +11561,7 @@
 	patches.suse/mlxsw-i2c-Fix-initialization-error-flow.patch
 	patches.suse/net-dsa-felix-suppress-EPROBE_DEFER-errors.patch
 	patches.suse/net-atlantic-Avoid-out-of-bounds-indexing.patch
+	patches.suse/net-ethernet-stmmac-fix-altr_tse_pcs-function-when-u.patch
 	patches.suse/net-smc-use-memcpy-instead-of-snprintf-to-avoid-out-of-bounds-read
 	patches.suse/net-smc-Fix-NULL-pointer-dereference-in-smc_pnet_find_ib
 	patches.suse/Revert-iavf-Fix-deadlock-occurrence-during-resetting.patch
