s390/boot: fix absolute zero lowcore corruption on boot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14219,6 +14219,7 @@
 	patches.suse/hwmon-mr75203-fix-voltage-equation-for-negative-sour.patch
 	patches.suse/hwmon-mr75203-fix-multi-channel-voltage-reading.patch
 	patches.suse/hwmon-mr75203-enable-polling-for-all-VM-channels.patch
+	patches.suse/s390-boot-fix-absolute-zero-lowcore-corruption-on-boot
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
 
