net: mscc: ocelot: fix broken IP multicast flooding (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11633,6 +11633,7 @@
 	patches.suse/net-sched-cls_u32-fix-netns-refcount-changes-in-u32_.patch
 	patches.suse/l3mdev-l3mdev_master_upper_ifindex_by_index_rcu-shou.patch
 	patches.suse/can-isotp-stop-timeout-monitoring-when-no-first-fram.patch
+	patches.suse/net-mscc-ocelot-fix-broken-IP-multicast-flooding.patch
 	patches.suse/doc-ip-sysctl-add-bc_forwarding.patch
 	patches.suse/selftests-mlxsw-vxlan_flooding-Prevent-flooding-of-u.patch
 	patches.suse/dmaengine-idxd-fix-device-cleanup-on-disable.patch
