net: dsa: lantiq_gswip: Don't set GSWIP_MII_CFG_RMII_CLK (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11727,6 +11727,7 @@
 	patches.suse/net-phy-marvell10g-fix-return-value-on-error.patch
 	patches.suse/net-dsa-mv88e6xxx-Fix-port_hidden_wait-to-account-fo.patch
 	patches.suse/virtio_net-fix-wrong-buf-address-calculation-when-us.patch
+	patches.suse/net-dsa-lantiq_gswip-Don-t-set-GSWIP_MII_CFG_RMII_CL.patch
 	patches.suse/ice-Fix-incorrect-locking-in-ice_vc_process_vf_msg.patch
 	patches.suse/ice-Protect-vf_state-check-by-cfg_lock-in-ice_vc_pro.patch
 	patches.suse/ice-fix-use-after-free-when-deinitializing-mailbox-s.patch
