net: mdio: Fix ENOMEM return value in BCM6368 mux bus controller (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11844,6 +11844,7 @@
 	patches.suse/can-grcan-grcan_probe-fix-broken-system-id-check-for.patch
 	patches.suse/can-grcan-only-use-the-NAPI-poll-budget-for-RX.patch
 	patches.suse/net-ethernet-mediatek-add-missing-of_node_put-in-mtk.patch
+	patches.suse/net-mdio-Fix-ENOMEM-return-value-in-BCM6368-mux-bus-.patch
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
 	patches.suse/net-stmmac-disable-Split-Header-SPH-for-Intel-platfo.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
