net: dsa: mt7530: add missing of_node_put() in mt7530_setup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11846,6 +11846,7 @@
 	patches.suse/net-ethernet-mediatek-add-missing-of_node_put-in-mtk.patch
 	patches.suse/net-mdio-Fix-ENOMEM-return-value-in-BCM6368-mux-bus-.patch
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
+	patches.suse/net-dsa-mt7530-add-missing-of_node_put-in-mt7530_set.patch
 	patches.suse/net-stmmac-disable-Split-Header-SPH-for-Intel-platfo.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
 	patches.suse/nfc-nfcmrvl-main-reorder-destructive-operations-in-n.patch
