net: cpsw: add missing of_node_put() in cpsw_probe_dt() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11848,6 +11848,7 @@
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
 	patches.suse/net-dsa-mt7530-add-missing-of_node_put-in-mt7530_set.patch
 	patches.suse/net-stmmac-dwmac-sun8i-add-missing-of_node_put-in-su.patch
+	patches.suse/net-cpsw-add-missing-of_node_put-in-cpsw_probe_dt.patch
 	patches.suse/net-stmmac-disable-Split-Header-SPH-for-Intel-platfo.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
 	patches.suse/nfc-nfcmrvl-main-reorder-destructive-operations-in-n.patch
