net: emaclite: Add error handling for of_address_to_resource() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11852,6 +11852,7 @@
 	patches.suse/net-stmmac-disable-Split-Header-SPH-for-Intel-platfo.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
 	patches.suse/nfc-nfcmrvl-main-reorder-destructive-operations-in-n.patch
+	patches.suse/net-emaclite-Add-error-handling-for-of_address_to_re.patch
 	patches.suse/selftests-mirror_gre_bridge_1q-Avoid-changing-PVID-w.patch
 	patches.suse/selftests-net-so_txtime-fix-parsing-of-start-time-st.patch
 	patches.suse/selftests-net-so_txtime-usage-fix-documentation-of-d.patch
