ice: Fix race during aux device (un)plugging (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11938,6 +11938,7 @@
 	patches.suse/ionic-fix-missing-pci_release_regions-on-error-in-io.patch
 	patches.suse/dim-initialize-all-struct-fields.patch
 	patches.suse/net-phy-Fix-race-condition-on-link-status-change.patch
+	patches.suse/ice-Fix-race-during-aux-device-un-plugging.patch
 	patches.suse/ice-clear-stale-Tx-queue-settings-before-configuring.patch
 	patches.suse/ice-fix-PTP-stale-Tx-timestamps-cleanup.patch
 	patches.suse/batman-adv-Don-t-skb_split-skbuffs-with-frag_list.patch
