net: dsa: bcm_sf2: Fix Wake-on-LAN with mac_link_down() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11955,6 +11955,7 @@
 	patches.suse/rfkill-uapi-fix-RFKILL_IOCTL_MAX_SIZE-ioctl-request-.patch
 	patches.suse/Bluetooth-Fix-the-creation-of-hdev-name.patch
 	patches.suse/net-ethernet-mediatek-ppe-fix-wrong-size-passed-to-m.patch
+	patches.suse/net-dsa-bcm_sf2-Fix-Wake-on-LAN-with-mac_link_down.patch
 	patches.suse/net-smc-non-blocking-recvmsg-return-EAGAIN-when-no-data-and-signal_pending
 	patches.suse/net-sfc-ef10-fix-memory-leak-in-efx_ef10_mtd_probe.patch
 	patches.suse/0002-drm-i915-Fix-race-in-__i915_vma_remove_closed.patch
