net: systemport: Fix an error handling path in bcm_sysport_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12019,6 +12019,7 @@
 	patches.suse/net-ipa-get-rid-of-a-duplicate-initialization.patch
 	patches.suse/net-macb-Increment-rx-bd-head-after-allocating-skb-a.patch
 	patches.suse/Revert-can-m_can-pci-use-custom-bit-timings-for-Elkh.patch
+	patches.suse/net-systemport-Fix-an-error-handling-path-in-bcm_sys.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
