net/mlx5e: Remove HW-GRO from reported features (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12027,6 +12027,7 @@
 	patches.suse/net-mlx5e-Block-rx-gro-hw-feature-in-switchdev-mode.patch
 	patches.suse/net-mlx5e-Properly-block-LRO-when-XDP-is-enabled.patch
 	patches.suse/net-mlx5e-Properly-block-HW-GRO-when-XDP-is-enabled.patch
+	patches.suse/net-mlx5e-Remove-HW-GRO-from-reported-features.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
