igb: skip phy status check where unavailable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12032,6 +12032,7 @@
 	patches.suse/ice-fix-crash-when-writing-timestamp-on-RX-rings.patch
 	patches.suse/ice-fix-possible-under-reporting-of-ethtool-Tx-and-R.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
+	patches.suse/igb-skip-phy-status-check-where-unavailable.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
 	patches.suse/ARM-9196-1-spectre-bhb-enable-for-Cortex-A15.patch
