PCI: Prefer 'unsigned int' over bare 'unsigned' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6652,6 +6652,7 @@
 	patches.suse/PCI-Add-ACS-quirk-for-Pericom-PI7C9X2G-switches.patch
 	patches.suse/PCI-Tidy-comments.patch
 	patches.suse/msft-hv-2452-PCI-hv-Remove-unnecessary-use-of-hx.patch
+	patches.suse/PCI-Prefer-unsigned-int-over-bare-unsigned.patch
 	patches.suse/PCI-Add-PCI_EXP_DEVCTL_PAYLOAD_-macros.patch
 	patches.suse/PCI-aardvark-Fix-PCIe-Max-Payload-Size-setting.patch
 	patches.suse/PCI-aardvark-Don-t-spam-about-PIO-Response-Status.patch
