PCI: Disable MSI for Tegra234 Root Ports (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13789,6 +13789,7 @@
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
 	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
+	patches.suse/PCI-Disable-MSI-for-Tegra234-Root-Ports.patch
 	patches.suse/PCI-tegra194-Fix-Root-Port-interrupt-handling.patch
 	patches.suse/PCI-tegra194-Fix-link-up-retry-sequence.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
