dmaengine: idxd: int handle management refactoring (jsc#PED-682).

--- a/series.conf
+++ b/series.conf
@@ -9141,6 +9141,7 @@
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
+	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/Documentation-dmaengine-Correctly-describe-dmatest-w.patch
 	patches.suse/dmaengine-idxd-set-defaults-for-wq-configs.patch
 	patches.suse/dmaengine-uniphier-xdmac-Fix-type-of-address-variabl.patch
